--- a/config.json
+++ b/config.json
@@ -1,6 +1,5 @@
 {
-  "token": "INSERT YOUR TOKEN HERE",
-  "prefix": ".",
-  "clientID": "INSERT YOUR BOT ID HERE"
-
+  "token": "https://discord.gg/ASdY9Nax",
+  "prefix": ph/,
+  "clientID": "Free"
 }
